--- a/src/index.css
+++ b/src/index.css
@@ -28,10 +28,20 @@
    outline: none;
    font-family: "Inter", sans-serif;
    text-decoration: none;
+   list-style: none;
 }
 
 body {
    width: 100vw;
    height: 100vh;
    overflow-x: hidden;
+   background: var(--white);
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+}
+
+#root {
+   width: 100%;
+   max-width: 1444px;
 }
