--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,9 @@
 #header-mobile {
    width: 100vw;
+   min-height: 50px;
+   background-color: var(--white);
    position: fixed;
+   z-index: 10;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
@@ -48,7 +51,12 @@
 
 #header-desktop {
    width: 100%;
+   max-width: 1444px;
+   z-index: 10;
+   background-color: var(--white);
+   position: fixed;
    height: 135px;
+   padding: 1rem 0;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
