feat: carousel style

--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -131,6 +131,7 @@
 
                & .content-slide {
                   width: 50%;
+                  padding: 0;
                   justify-content: flex-start;
                   align-items: flex-start;
 
