--- a/src/components/CardCollection/CardCollection.css
+++ b/src/components/CardCollection/CardCollection.css
@@ -10,13 +10,15 @@
    border-radius: .5rem;
    min-height: 212px;
    transition: .5s;
+   width: 100%;
+   max-width: 450px;
 
    &:hover {
       transform: scale(1.05);
    }
 
    .div-off {
-      background-color: var(--success);
+      background-color: #e7ff86;
       color: var(--dark-gray-2);
       width: fit-content;
       padding: 0.5rem 0.8rem;
