--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,12 +1,15 @@
 footer {
    display: flex;
    flex-direction: column;
+   align-items: center;
    gap: 2rem;
    background-color: var(--dark-gray);
    padding: 3rem 2rem;
    color: var(--light-gray-3);
 
    & #first-div-footer {
+      width: 100%;
+      max-width: 1444px;
       display: flex;
       flex-direction: column;
       gap: 2rem;
@@ -78,6 +81,7 @@ footer {
       background: var(--light-gray-2);
       height: 1px;
       width: 100%;
+      max-width: 1444px;
    }
 
    & #div-digital-college {
