--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -51,16 +51,21 @@
 
 #header-desktop {
    width: 100%;
-   max-width: 1444px;
    z-index: 10;
    background-color: var(--white);
    position: fixed;
-   height: 135px;
-   padding: 1rem 0;
+   min-height: 130px;
    display: flex;
    flex-direction: column;
+   align-items: center;
    justify-content: space-between;
    gap: 1rem;
+
+   & #center-header-desktop {
+      width: 100%;
+      max-width: 1444px;
+      height: 135px;
+   }
 
    & #div-first-desktop {
       width: 100%;
