--- a/src/components/CardProduct/CardProduct.css
+++ b/src/components/CardProduct/CardProduct.css
@@ -4,6 +4,7 @@
    flex-direction: column;
    gap: 0.5rem;
    transition: 0.2s;
+   cursor: pointer;
 
    &:hover {
       transform: scale(1.05);
