--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -23,14 +23,15 @@
                display: flex;
                height: 60%;
                flex-direction: column;
-               padding: 2.2rem 0;
-               justify-content: space-between;
+               padding: 1rem 0;
+               justify-content: space-around;
                align-items: center;
 
                & .p-offers {
                   color: var(--primary);
                   font-weight: 700;
                   margin-bottom: 2rem;
+                  letter-spacing: 0.75px;
                }
 
                & h2 {
@@ -42,11 +43,13 @@
                   color: var(--dark-gray);
                   margin-bottom: 2rem;
                   line-height: 50px;
+                  letter-spacing: 1px;
                }
 
                & p {
                   text-align: center;
                   color: var(--dark-gray-2);
+                  letter-spacing: 0.75px;
                   margin-bottom: 4rem;
                   font-weight: 500;
                }
@@ -63,19 +66,18 @@
                height: 40%;
                padding: 2rem;
                background-repeat: no-repeat;
-               background-size: 80%;
+               background-size: contain;
                background-position: center;
             }
 
             & #image1 {
-               background-image: url("../../../public/assets/home-slide-4.png");
+               background-image: url("../../../public/assets/slide1.webp");
             }
             & #image2 {
-               background-image: url("../../../public/assets/home-slide-5.png");
+               background-image: url("../../../public/assets/slide2.webp");
             }
             & #image3 {
-               background-image: url("../../../public/assets/home-slide-6.png");
-               background-size: 60%;
+               background-image: url("../../../public/assets/slide3.webp");
             }
          }
       }
@@ -92,12 +94,12 @@
                position: relative;
 
                &:before {
-                  content: ""; /* Remove o conteúdo padrão da pseudo-classe */
+                  content: "";
                }
             }
 
             &.slick-active button {
-               background-color: var(--primary); /* Cor do dot ativo */
+               background-color: var(--primary); 
             }
          }
       }
@@ -132,8 +134,10 @@
                & .content-slide {
                   width: 50%;
                   padding: 0;
-                  justify-content: flex-start;
+                  justify-content: center;
                   align-items: flex-start;
+                  gap: 1rem;
+                  height: 80%;
 
                   & .p-offers {
                      color: var(--warning);
@@ -145,6 +149,7 @@
                      text-align: left;
                      color: var(--dark-gray);
                      line-height: 70px;
+                     margin: 0;
                   }
 
                   & p {
@@ -168,8 +173,8 @@
                   background-size: 80%;
                }
 
-               & #image3 {
-                  width: 45%;
+               & #image1 {
+                  background-size: 70%;
                }
             }
          }
