--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -133,6 +133,7 @@
                color: var(--light-gray);
                padding-bottom: 0.2rem;
                font-size: 1.1rem;
+               cursor: pointer;
 
                &:hover {
                   color: var(--primary);
