fix: carousel image quality

--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -71,7 +71,7 @@
             }
 
             & #image1 {
-               background-image: url("../../../public/assets/slide1.webp");
+               background-image: url("../../../public/assets/slide1.png");
             }
             & #image2 {
                background-image: url("../../../public/assets/slide2.webp");
